// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RapmUtils RapmUtils - buildPlayerContext 1`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
    "Player, Other",
    "Data, Dummy",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0,
  },
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 8,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Data, Dummy": 7,
    "Morsell, Darryl": 3,
    "Player, Other": 6,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": -0.6000000000000001,
      "off": 0.6000000000000001,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "off_adj_ppp": 5.1,
      },
      Object {
        "off_adj_ppp": 5.6,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -5.1,
        "off_adj_ppp": 5.1,
      },
      Object {
        "def_adj_ppp": -5.6,
        "off_adj_ppp": 5.6,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {},
  "unbiasWeight": 0,
}
`;

exports[`RapmUtils RapmUtils - buildPlayerContext 2`] = `
Object {
  "avgEfficiency": 100,
  "colToPlayer": Array [
    "Wiggins, Aaron",
    "Cowan, Anthony",
    "Smith, Jalen",
    "Morsell, Darryl",
    "Ayala, Eric",
    "Scott, Donta",
  ],
  "config": Object {
    "fixedRegression": -1,
    "priorMode": -1,
    "removalPct": 0.2,
  },
  "defLineupPoss": 944,
  "numLineups": 5,
  "numPlayers": 6,
  "offLineupPoss": 959,
  "playerToCol": Object {
    "Ayala, Eric": 4,
    "Cowan, Anthony": 1,
    "Morsell, Darryl": 3,
    "Scott, Donta": 5,
    "Smith, Jalen": 2,
    "Wiggins, Aaron": 0,
  },
  "priorInfo": Object {
    "basis": Object {
      "def": -0.6000000000000001,
      "off": 0.6000000000000001,
    },
    "includeStrong": Object {},
    "keyUsed": "value",
    "noWeakPrior": false,
    "playersStrong": Array [
      Object {
        "off_adj_ppp": 5.1,
      },
      Object {
        "off_adj_ppp": 5.6,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "off_adj_ppp": 0.6000000000000001,
      },
    ],
    "playersWeak": Array [
      Object {
        "def_adj_ppp": -5.1,
        "off_adj_ppp": 5.1,
      },
      Object {
        "def_adj_ppp": -5.6,
        "off_adj_ppp": 5.6,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
      Object {
        "def_adj_ppp": -0.6000000000000001,
        "off_adj_ppp": 0.6000000000000001,
      },
    ],
    "strongWeight": -1,
    "useRecursiveWeakPrior": false,
  },
  "removedPlayers": Object {
    "Data, Dummy": Array [
      0.05254860746190226,
      0,
      Object {
        "def_poss": Object {
          "value": 50,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 50,
        },
      },
    ],
    "Player, Other": Array [
      0.1576458223857068,
      0,
      Object {
        "def_poss": Object {
          "value": 150,
        },
        "doc_count": 0,
        "key": "empty",
        "off_poss": Object {
          "value": 150,
        },
      },
    ],
  },
  "unbiasWeight": 0,
}
`;
